// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders multiple tabs correctly 1`] = `

<div class="govuk-tabs">
  <ul class="govuk-tabs__list"
      role="tablist"
  >
    <li class="govuk-tabs__list-item"
        role="presentation"
    >
      <a aria-controls="tab-1"
         aria-selected="true"
         class="govuk-tabs__tab govuk-tabs__tab--selected"
         href="#tab-1"
         id="tab-1-tab"
         role="tab"
      >
        Tab 1
      </a>
    </li>
    <li class="govuk-tabs__list-item"
        role="presentation"
    >
      <a aria-controls="tab-2"
         aria-selected="false"
         class="govuk-tabs__tab"
         href="#tab-2"
         id="tab-2-tab"
         role="tab"
         tabindex="-1"
      >
        Tab 2
      </a>
    </li>
  </ul>
  <section aria-labelledby="tab-1-tab"
           class="govuk-tabs__panel panel"
           id="tab-1"
           role="tabpanel"
           tabindex="-1"
  >
    <p>
      Test section 1 content
    </p>
  </section>
  <section aria-labelledby="tab-2-tab"
           class="govuk-tabs__panel panel govuk-tabs__panel--hidden"
           id="tab-2"
           hidden
           role="tabpanel"
           tabindex="-1"
  >
    <p>
      Test section 2 content
    </p>
  </section>
</div>

`;

exports[`Tabs renders single tab correctly 1`] = `

<div class="govuk-tabs">
  <ul class="govuk-tabs__list"
      role="tablist"
  >
    <li class="govuk-tabs__list-item"
        role="presentation"
    >
      <a aria-controls="tab-1"
         aria-selected="true"
         class="govuk-tabs__tab govuk-tabs__tab--selected"
         href="#tab-1"
         id="tab-1-tab"
         role="tab"
      >
        Tab 1
      </a>
    </li>
  </ul>
  <section aria-labelledby="tab-1-tab"
           class="govuk-tabs__panel panel"
           id="tab-1"
           role="tabpanel"
           tabindex="-1"
  >
    <p>
      Test section 1 content
    </p>
  </section>
</div>

`;
